alignment issues fixed

--- a/circle/css/style.css
+++ b/circle/css/style.css
@@ -1,12 +1,4 @@
- /*.card img {
-     position: absolute;
- }*/
- 
  .card {
-    /* width: 200px;
- height: 200px;
- overflow: hidden;
-*/
      color: white;
  }
  
